fix(forms): compact layout alignment fixes

--- a/projects/angular/src/forms/styles/_containers.clarity.scss
+++ b/projects/angular/src/forms/styles/_containers.clarity.scss
@@ -189,10 +189,11 @@
     .clr-success {
       .clr-subtext {
         margin-left: tokens.$cds-global-space-3;
-      }
-      .clr-subtext.error,
-      .clr-subtext.success {
-        margin-left: tokens.$cds-global-space-4;
+
+        &.error,
+        &.success {
+          margin-left: tokens.$cds-global-space-4;
+        }
       }
 
       // Center the validation icon
